--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
 		<div id="section"align="center">
 			<br /><br /><br /><br />
 			<img src="img/鸭鸭.gif" width="88"height="88">
-			<h2>welcome to my webside!</h2>
+			<h2>welcome to my website!</h2>
 			<br /><br /><br /><br />
 			
 			<div class="tooltip"><a href=""><img src="img/1.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验一</span></div>
-			<div class="tooltip"><a href=""><img src="img/2.gif" width="88"height="88"弧度></a>
+			<div class="tooltip"><a href=""><img src="img/2.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验二</span></div>
-			<div class="tooltip"><a href=""><img src="img/3.gif" width="88"height="88"弧度></a>
+			<div class="tooltip"><a href=""><img src="img/3.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验三</span></div>
-			<div class="tooltip"><a href=""><img src="img/4.gif" width="88"height="88"弧度></a>
+			<div class="tooltip"><a href=""><img src="img/4.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验四</span></div>
-			<div class="tooltip"><a href=""><img src="img/5.gif" width="88"height="88"弧度></a>
+			<div class="tooltip"><a href=""><img src="img/5.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验五</span></div>
 		</div>
 		
