--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Wwwwwow778</title>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 		<style type="text/css">
 			/* #header {
 			    background-color:black;
@@ -27,6 +28,14 @@
 				margin: auto;
 				opacity: 0.97;
 				border-radius: 50px;
+				color: #000000;
+				text-decoration: none;
+/* 				font-family: Sofia;
+				font-size: larger; */
+			}
+			#td{
+				font-family: Sofia;
+				font-size: 45px;
 			}
 			
 			.tooltip {
@@ -47,15 +56,52 @@
 			  /* 定位工具提示 */
 			  position: absolute;
 			  z-index: 1;
+			  
 			}
 			
 			.tooltip:hover .tooltiptext {
 			  visibility: visible;
 			}
+			#button{
+				/* background-color: #6495ED; */
+				color: white;
+				/* font-family: Sofia; */
+				/* font-size: small; */
+				display: inline-block;
+				padding: 8px 12px;
+				font-size: 18px;
+				cursor: pointer;
+				text-align: center;
+				text-decoration: none;
+				outline: none;
+				/* color: black; */
+				/* background-color: black; */
+				border: none;
+				border-radius: 25px;
+				/* box-shadow: 0 9px #999; */
+			}
+			#button:hover {
+				background-color: lightsteelblue
+			}
+
+			#button:active {
+				/* background-color: #3e8e41; */
+				/* box-shadow: 0 500px #666; */
+				/* transform: translateY(4px); */
+				}
+			#footer {
+			    /* background-color:black; */
+			    color:white;
+			    clear: none;
+			    text-align:center;
+			    padding:1px; 
+				font-size: smaller;
+			}
+			
 		</style>
+		
 	</head>
 	<body background="img/印花.gif">
-		<!-- <p>&#128512;</p> -->
 		<!-- <div id="header">
 		<h1>City Gallery</h1>
 		</div> -->
@@ -68,12 +114,16 @@
 		</div> -->
 		
 		<div id="section"align="center">
-			<br /><br /><br /><br />
+			<br /><br /><br />
 			<img src="img/鸭鸭.gif" width="88"height="88">
-			<h2>welcome to my website!</h2>
-			<br /><br /><br /><br />
+			<div id="td">
+				welcome to my website!<br>
+				hahh
+				<!-- here you will get happy!! -->
+			</div>
+			<br /><br /><br /><br /><br />
 			
-			<div class="tooltip"><a href=""><img src="img/1.gif" width="88"height="88"></a>
+			<div class="tooltip"><a href="abcd汇总网页/huiz.html"><img src="img/1.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验一</span></div>
 			<div class="tooltip"><a href=""><img src="img/2.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验二</span></div>
@@ -83,7 +133,19 @@
 			<span class="tooltiptext">实验四</span></div>
 			<div class="tooltip"><a href=""><img src="img/5.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验五</span></div>
+			<br><br><br><br><br><br>
+			<div id="button">
+				<!-- <a href="">Self-introduction</a>
+				<a href="">Hobbies</a>
+				<a href="">More</a> -->
+				<a href="">Next</a>
+				
+			</div>
+		
 		</div>
 		
+		<div id="footer">
+		(#`O′) ©Wowwww778.com &nbsp;&nbsp;all rights reserved 暂时没想好科技有限公司
+		</div>
 	</body>
 </html>
