--- a/汇总/huiz.html
+++ b/汇总/huiz.html
@@ -5,10 +5,10 @@
 		<title></title>
 	</head>
 	<body>实验一：
-		<li><a href="实验一1/a.html">a</a></li><br>
-		<li><a href="实验一2/b.html">b</a></li><br>
-		<li><a href="实验一3/c.html">c</a></li><br>
-		<li><a href="实验一4/d.html">d</a></li><br>
+		<li><a href="a.html">a</a></li><br>
+		<li><a href="b.html">b</a></li><br>
+		<li><a href="c.html">c</a></li><br>
+		<li><a href="d.html">d</a></li><br>
 		<li><a href="">e</a></li><br>
 		
 	</body>
