--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			</div>
 			<br /><br /><br /><br /><br />
 			
-			<div class="tooltip"><a href="huiz.html"><img src="img/1.gif" width="88"height="88"></a>
+			<div class="tooltip"><a href="汇总/huiz.html"><img src="img/1.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验一</span></div>
 			<div class="tooltip"><a href=""><img src="img/2.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验二</span></div>
