--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			
 			<div class="tooltip"><a href="huiz.html"><img src="img/1.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验一</span></div>
-			<div class="tooltip"><a href=""><img src="img/2.gif" width="88"height="88"></a>
+			<div class="tooltip"><a href="index2.html"><img src="img/2.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验二</span></div>
 			<div class="tooltip"><a href=""><img src="img/3.gif" width="88"height="88"></a>
 			<span class="tooltiptext">实验三</span></div>
