--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
 			<br /><br /><br /><br /><br />
 			
 			<div class="tooltip"><a href="huiz.html"><img src="img/1.gif" width="88"height="88"></a>
-			<span class="tooltiptext">实验一</span></div>
+			<span class="tooltiptext">Lab1</span></div>
 			<div class="tooltip"><a href="index2.html"><img src="img/2.gif" width="88"height="88"></a>
-			<span class="tooltiptext">实验二</span></div>
+			<span class="tooltiptext">Lab2</span></div>
 			<div class="tooltip"><a href=""><img src="img/3.gif" width="88"height="88"></a>
-			<span class="tooltiptext">实验三</span></div>
+			<span class="tooltiptext">Lab3</span></div>
 			<div class="tooltip"><a href=""><img src="img/4.gif" width="88"height="88"></a>
-			<span class="tooltiptext">实验四</span></div>
+			<span class="tooltiptext">Lab4</span></div>
 			<div class="tooltip"><a href=""><img src="img/5.gif" width="88"height="88"></a>
-			<span class="tooltiptext">实验五</span></div>
+			<span class="tooltiptext">Lab5</span></div>
 			<br><br><br><br><br><br>
 			<div id="button">
 				<!-- <a href="">Self-introduction</a>
